[project]
name = "reproca"
version = "0.0.1"
description = "Build APIs at the speed of light"
authors = [{ name = "aspizu", email = "aspizu@protonmail.com" }]
dependencies = ["msgspec>=0.18.6", "pymemcache>=4.0.0"]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["uvicorn>=0.29.0", "rich>=13.7.1"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/reproca"]

[tool.pyright]
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = true
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportMissingModuleSource = false
reportMissingTypeStubs = false
reportWildcardImportFromLibrary = false
reportPrivateUsage = false

[tool.ruff.lint]
select = ["ALL"]
extend-safe-fixes = ["ALL"]
extend-unsafe-fixes = ["T201"]
unfixable = []
ignore = [
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
    "ANN101",
    "SLF001",
    "FBT",
]

[tool.ruff.format]
docstring-code-format = true
